--- a/test/normal_escape_snob.html
+++ b/test/normal_escape_snob.html
@@ -71,6 +71,8 @@
       <span>
         <b>bold</b><br/>
         <i>italic</i><br/>
+        text with **asterisks but not** bold<br/>
+        text with *asterisk but not* italicized<br/>
         text with _underscore but not _italicized<br/>
       </span>
     </p>
@@ -86,7 +88,7 @@ def func(x):
       Some <code>fixed width text</code> here<br/>
       <i><code>italic fixed width text</code></i>
     </p>
-
+<span>this is # simple text</span>
 <script type="text/javascript">
 //<![CDATA[
 (function(id) {
